Breadcrumb bar fixes, and search is now "contains" instead of "starts with"
Got rid of the RTL text direction, which did exactly what I want position-wise, but messed up punctuation (like parentheses)
Page search results now have a little descriptive header

--- a/css/treemap.css
+++ b/css/treemap.css
@@ -30,7 +30,6 @@
 
 .treemap-container > div.content > div.head {
 	background-color: gray;
-	direction:rtl; /* When the breadcrumb list becomes too long, it will scroll off to the left, and the current node name will stay visible on the right */
 }
 
 .treemap-container div.body {
@@ -60,4 +59,9 @@
 
 .treemap-container .head a.ancestor {
 	text-decoration: none;
+}
+
+.treemap-container span.breadcrumbs {
+	position:absolute; 
+	right:10px;
 }
